[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/results/results.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/title.tres" type="Theme" id=2]
[ext_resource path="res://gui/menu/menu_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/menu/menu_rows/button_menu_row.tscn" type="PackedScene" id=4]

[node name="Results" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 64.0
margin_top = 123.0
margin_right = 576.0
margin_bottom = 237.0

[node name="HeadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 18.0
text = "CARD.RESULTS"
align = 1
valign = 1

[node name="HeadingSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 512.0
margin_bottom = 26.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 512.0
margin_bottom = 70.0
columns = 2

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 452.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "LABEL.STAT.TIME"

[node name="TimeValue" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 456.0
margin_right = 512.0
margin_bottom = 18.0
text = "00:00:00"
align = 2

[node name="AlertCountLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 22.0
margin_right = 452.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "LABEL.STAT.ALERT_COUNT"

[node name="AlertCountValue" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 456.0
margin_top = 22.0
margin_right = 512.0
margin_bottom = 40.0
text = "0"
align = 2

[node name="MenuList" parent="CenterContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 74.0
margin_right = 512.0
margin_bottom = 106.0

[node name="ContinueButton" parent="CenterContainer/VBoxContainer/MenuList" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 512.0
_text = "BUTTON.RESULTS_CONTINUE"

[node name="MenuSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 512.0
margin_bottom = 114.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuList/ContinueButton" to="." method="_on_continue_button_pressed"]
